# python-project-lvl2

./: .gitignore  .travis.yml  README.md  makefile  pyproject.toml
difference_calculator/scripts/: difference_calculator.py
gendiff/: README.md  engine.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_build_diff.py  test_simple.py
tests/fixtures/: before1.json  diff.txt  diff1.txt
