[tool.poetry]
name = "simpllex_difference_calculator"
version = "0.1.0"
description = ""
authors = ["vera <marinenskaya.vera@gmail.com>"]
packages = [
  { include = "difference_calculator" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "difference_calculator.scripts.difference_calculator:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
