[tool.poetry]
name = "simpllex_gendiff"
version = "0.1.0"
description = ""
authors = ["vera <marinenskaya.vera@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
coverage = "^5.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
